obsidian-tidy-lexer/src/token_stream/interceptor/snapshots/obsidian_tidy_parser__token_stream__interceptor__callout_interceptor__tests__simple_callout_tip.snap
---
source: obsidian-tidy-parser/src/token_stream/interceptor/callout_interceptor.rs
expression: tokens
---
[
  [
    {
      "Start": {
        "Callout": {
          "kind": "tip",
          "header_offset": {
            "start": 2,
            "end": 8
          },
          "foldable": "None"
        }
      }
    },
    {
      "start": 0,
      "end": 18
    }
  ],
  [
    {
      "Start": "Paragraph"
    },
    {
      "start": 2,
      "end": 18
    }
  ],
  [
    {
      "Text": "["
    },
    {
      "start": 2,
      "end": 3
    }
  ],
  [
    {
      "Text": "!tip"
    },
    {
      "start": 3,
      "end": 7
    }
  ],
  [
    {
      "Text": "]"
    },
    {
      "start": 7,
      "end": 8
    }
  ],
  [
    "SoftBreak",
    {
      "start": 8,
      "end": 9
    }
  ],
  [
    {
      "Text": "Content"
    },
    {
      "start": 11,
      "end": 18
    }
  ],
  [
    {
      "End": "Paragraph"
    },
    {
      "start": 2,
      "end": 18
    }
  ],
  [
    {
      "End": "Callout"
    },
    {
      "start": 0,
      "end": 18
    }
  ]
]
